--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 
 <body>
   <div class="player">
-    <video src="http://r.dcs.redcdn.pl/http/o2/atendesoftware/portal/video/atendesoftware/atendesoftware2.mp4" muted controls autoplay></video>
+    <video src="http://r.dcs.redcdn.pl/http/o2/atendesoftware/portal/video/atendesoftware/atendesoftware2.mp4" autoplay></video>
     <div id="subs"></div>
+    <div class="menu">
+      <button type="button" name="button" onclick="document.querySelector('video').play()">play</button>
+      <button type="button" name="button" onclick="document.querySelector('video').pause()">pause</button>
+      <input id="timeline" type="range" name="" value="" min="0" max="100" step="0.1">
+      <button type="button" name="button" onclick="document.querySelector('.player').mozRequestFullScreen()">fullscreen</button>
+    </div>
   </div>
-  <button type="button" name="button" onclick="document.querySelector('.player').mozRequestFullScreen()">fullscreen</button>
+
 </body>
 
 </html>
@@ -25,16 +31,23 @@
 
   async function main() {
     let subtitles = parseSubtitles(await getSubtitles(subitlesUrl))
+    let videoDOM = document.querySelector('video')
     let subtitlesDOM = document.querySelector('#subs')
+    let timelineDOM = document.querySelector('#timeline')
+    timelineDOM.onchange = function() {
+      document.querySelector('video').currentTime = this.value / 100 * document.querySelector('video').duration
+    }
 
     let loop = setInterval(() => {
-      let currentTime = document.querySelector('video').currentTime
+      let currentTime = videoDOM.currentTime
       let currentSub = subtitles.find((el) => {
         return el.startTime < currentTime && el.endTime > currentTime
       })
       if (currentSub) {
         subtitlesDOM.innerHTML = currentSub.textLine
       } else subtitlesDOM.innerHTML = ''
+
+      timelineDOM.value = currentTime / videoDOM.duration * 100
     }, 100)
   }
 
@@ -80,8 +93,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 100%;
+    position: relative;
   }
 
   .player * {
@@ -91,9 +106,9 @@
 
   #subs {
     align-self: flex-end;
-    transform: translateY(-50px);
+    transform: translateY(-2.5em);
     font-size: 150%;
-    width: 80%;
+    max-width: 80%;
     color: white;
     position: absolute;
     z-index: 100;
@@ -110,5 +125,10 @@
     object-fit: contain;
     width: 100%;
     height: 100%;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: row;
   }
 </style>
