--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   .player {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     flex-direction: column;
     width: 100%;
@@ -105,7 +105,7 @@
   }
 
   #subs {
-    align-self: flex-end;
+    /* align-self: flex-end; */
     transform: translateY(-2.5em);
     font-size: 150%;
     max-width: 80%;
@@ -128,7 +128,16 @@
   }
 
   .menu {
+    background: #000a;
+    width: 100%;
+    position: absolute;
+    z-index: 50;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+  }
+
+  #timeline {
+    flex: auto;
   }
 </style>
