prevent selecting subs

--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
     background: #0005;
     text-align: center;
     visibility: visible;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
   }
 
   video {
